# Haskell-Nordom-Library

./: nordom.cabal
Prelude/: Maybe.annah  Monoid  Ordering.annah
Prelude/Maybe/: Just.annah  Nothing.annah
Prelude/Natural/: (!=)  (*)  (+)  (<)  (<=)  (==)  (>)  (>=)  @  compare  fold  maxIndex  maximum  minIndex  minimum  product  sum
Prelude/Ordering/: @  EQ  EQ.annah  GT  GT.annah  LT  LT.annah
Prelude/Prod0/: @  Make
Prelude/Vector/: (++)  (==)  @  all  and  any  break  concat  concatMap  cons  drop  dropEnd  dropEndWhile  dropWhile  elem  elemIndex  elemIndices  enum  enumFromN  enumFromStepN  filter  find  findIndex  findIndices  foldl  foldr  generate  head  ifilter  ifoldl  ifoldr  imap  index  indexed  init  iterateN  join  last  length  map  (+22 more)
exec/: Main.hs
src/Nordom/: Context.hs  Core.hs  Import.hs  Lexer.x  Parser.hs
