Name: nordom
Version: 1.0.0
Cabal-Version: >=1.8.0.2
Build-Type: Simple
Tested-With: GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.2
License: BSD3
License-File: LICENSE
Copyright: 2016 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/Gabriel439/Haskell-Nordom-Library/issues
Synopsis: A variation on Morte that is close to the machine
Description: To be described
Category: Compiler
Source-Repository head
    Type: git
    Location: https://github.com/Gabriel439/Haskell-Nordom-Library

Library
    Hs-Source-Dirs: src
    Build-Depends:
        base             >= 4        && < 5   ,
        array            >= 0.4.0.0  && < 0.6 ,
        containers       >= 0.5.0.0  && < 0.6 ,
        Earley           >= 0.10.1.0 && < 0.12,
        http-client      >= 0.4.0    && < 0.5 ,
        http-client-tls  >= 0.2.0    && < 0.3 ,
        lens-family-core >= 1.0.0    && < 1.3 ,
        pipes            >= 4.0.0    && < 4.2 ,
        system-filepath  >= 0.3.1    && < 0.5 ,
        system-fileio    >= 0.2.1    && < 0.4 ,
        text             >= 0.11.1.0 && < 1.3 ,
        text-format                     < 0.4 ,
        transformers     >= 0.2.0.0  && < 0.6 ,
        vector           >= 0.3      && < 0.12
    Exposed-Modules:
        Nordom.Core,
        Nordom.Context,
        Nordom.Import,
        Nordom.Lexer,
        Nordom.Parser
--      Nordom.Tutorial
    Build-Tools: alex
    GHC-Options: -O2

Executable nordom
    Hs-Source-Dirs: exec
    Main-Is: Main.hs
    Build-Depends:
        base                 >= 4        && < 5   ,
        nordom                                    ,
        optparse-applicative                < 0.13,
        system-filepath      >= 0.3.1    && < 0.5 ,
        system-fileio        >= 0.2.1    && < 0.4 ,
        text                 >= 0.11.1.0 && < 1.3
